test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/switch_on_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  union
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  switch
  (
  identifier(x)
  )
  {
  case
  const int(1)
  :
  return
  const int(0)
  ;
  default
  :
  return
  const int(1)
  ;
  }
  }
